--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <div class="form-group">
                 <label for="quantity">Quantity:</label>
                 <select id="quantity" required>
-                    <option value="Half">120 gm</option>
-                    <option value="Full">100 gm</option>
-                    <option value="Full">50 gm</option>
+                    <option value="120 gm">120 gm</option>
+                    <option value="100 gm">100 gm</option>
+                    <option value="50 gm">50 gm</option>
                 </select>
             </div>
             
