--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
             <div class="form-group">
                 <label for="quantity">Quantity:</label>
                 <select id="quantity" required>
-                    <option value="120 gm">120 gm</option>
-                    <option value="100 gm">100 gm</option>
-                    <option value="50 gm">50 gm</option>
+                    <option value="1 Meal(3 Pieces Sandwich)">1 Meal(3 Pieces Sandwich)</option>
+                    <option value="2 Meal(6 Pieces Sandwich)">2 Meal(6 Pieces Sandwich)</option>
+                    <option value="3 Meal(9 Pieces Sandwich)">3 Meal(9 Pieces Sandwich)</option>
+                    <option value="1 Shake">1 Shake</option>
+                    <option value="2 Shakes">2 Shakes</option>
                 </select>
             </div>
             
