--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <select id="dish" required>
                     <option value="Brown Bread Chicken Sandwich">Brown Bread Chicken Sandwich</option>
                     <option value="Brown Bread Paneer Sandwich">Brown Bread Paneer Sandwich</option>
-                    <option value="Banana Shake">Banana Shake</option>
+                    <option value="Banana Shake">Dry Fruits & Tukmalanga Shake</option>
                 </select>
             </div>
             
