--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <option value="1 Meal(3 Pieces Sandwich)">1 Meal(3 Pieces Sandwich)</option>
                     <option value="2 Meal(6 Pieces Sandwich)">2 Meal(6 Pieces Sandwich)</option>
                     <option value="3 Meal(9 Pieces Sandwich)">3 Meal(9 Pieces Sandwich)</option>
-                    <option value="1 Shake">1 Shake</option>
-                    <option value="2 Shakes">2 Shakes</option>
+                    <option value="1 Meal(6 Pieces Sandwich)">1 Meal(chicken Rice Box)</option>
+                    <option value="1 Meal(9 Pieces Sandwich)">1 Meal(Chicken Rice Box)</option>
                 </select>
             </div>
             
