--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 <select id="dish" required>
                     <option value="Brown Bread Chicken Sandwich">Brown Bread Chicken Sandwich</option>
                     <option value="Brown Bread Paneer Sandwich">Brown Bread Paneer Sandwich</option>
-                    <option value="Banana Shake">Dry Fruits & Tukmalanga Shake</option>
+                    <option value="Banana Shake">Chicken Rice</option>
+                    <option value="Banana Shake">Double Chicken Rice</option>
                 </select>
             </div>
             
@@ -49,8 +50,8 @@
                     <option value="1 Meal(3 Pieces Sandwich)">1 Meal(3 Pieces Sandwich)</option>
                     <option value="2 Meal(6 Pieces Sandwich)">2 Meal(6 Pieces Sandwich)</option>
                     <option value="3 Meal(9 Pieces Sandwich)">3 Meal(9 Pieces Sandwich)</option>
-                    <option value="1 Meal(6 Pieces Sandwich)">1 Meal(chicken Rice Box)</option>
-                    <option value="1 Meal(9 Pieces Sandwich)">1 Meal(Chicken Rice Box)</option>
+                    <option value="1 Meal(Chicken Rice Box)">1 Meal(chicken Rice Box)</option>
+                    <option value="1 Meal(Chicken Rice Box)">1 Meal(Chicken Rice Box)</option>
                 </select>
             </div>
             
